--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,16 @@
     "type": "git",
     "url": "git://github.com/GeorgeErickson/favjs.git"
   },
-  "main": "server.js",
+  "main": "app.js",
   "engines": {
     "node": "~0.6.11"
   },
   "dependencies": {
     "express": "",
     "express-mongoose": "",
-    "everyauth": ""
+    "everyauth": "",
+    "jade": "",
+    "less": ""
   },
   "devDependencies": {},
   "optionalDependencies": {}
